--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,6 @@ enable_testing()
 add_executable(patate
     patate.cpp
     )
-
 add_test(patate
     patate
     )
@@ -16,8 +15,15 @@ add_executable(carotte
     catch_main.cpp
     carotte.cpp
     )
-
 add_test(carotte
     carotte
+    )
+
+add_executable(salade
+    catch_main.cpp
+    salade.cpp
+    )
+add_test(salade
+    salade
     )
 
